Update and rename Simple Linear Regression.ipynb to Linear Regression.ipynb

--- a/Linear Regression.ipynb
+++ b/Linear Regression.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Simple Linear Regression for a Advertisement dataset"
+    "Linear Regression for a Advertisement dataset"
    ]
   },
   {
